@@ -21,7 +21,6 @@
 package org.monarchinitiative.exomiser.core.analysis;
 
 import org.junit.jupiter.api.Test;
-import org.monarchinitiative.exomiser.core.analysis.util.InheritanceModeOptions;
 import org.monarchinitiative.exomiser.core.filters.*;
 import org.monarchinitiative.exomiser.core.genome.GenomeAnalysisServiceProvider;
 import org.monarchinitiative.exomiser.core.genome.TestFactory;
@@ -33,13 +32,12 @@ import org.monarchinitiative.exomiser.core.prioritisers.OmimPriority;
 
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.monarchinitiative.exomiser.core.model.pathogenicity.PathogenicitySource.*;
 
-public class AnalysisPresetBuilderTest {
+class AnalysisPresetBuilderTest {
 
     private static final Set<FrequencySource> FREQUENCY_SOURCES = Set.copyOf(FrequencySource.NON_FOUNDER_POPS);
 
@@ -48,16 +46,18 @@ public class AnalysisPresetBuilderTest {
 
     // presets
     @Test
-    public void testBuildExomePreset() {
+    void testBuildExomePreset() {
         Analysis analysis = instance.buildExomePreset();
-        assertThat(analysis.getAnalysisMode(), equalTo(AnalysisMode.PASS_ONLY));
-        assertThat(analysis.getInheritanceModeOptions(), equalTo(InheritanceModeOptions.defaults()));
-        assertThat(analysis.getFrequencySources(), equalTo(FREQUENCY_SOURCES));
-        assertThat(analysis.getPathogenicitySources(), equalTo(Set.of(REVEL, MVP)));
-        assertThat(analysis.getAnalysisSteps().stream().map(AnalysisStep::getClass).collect(Collectors.toList()),
+        assertThat(analysis.analysisMode(), equalTo(AnalysisMode.PASS_ONLY));
+        assertThat(analysis.inheritanceModeOptions(), equalTo(InheritanceModeOptions.defaults()));
+        assertThat(analysis.frequencySources(), equalTo(FREQUENCY_SOURCES));
+        assertThat(analysis.pathogenicitySources(), equalTo(Set.of(REVEL, MVP, ALPHA_MISSENSE, SPLICE_AI)));
+        assertThat(analysis.analysisSteps().stream().map(AnalysisStep::getClass).toList(),
                 equalTo(List.of(
-                        VariantEffectFilter.class,
+                        GeneBlacklistFilter.class,
                         FailedVariantFilter.class,
+                        AlleleBalanceFilter.class,
+                        VariantEffectFilter.class,
                         FrequencyFilter.class,
                         PathogenicityFilter.class,
                         InheritanceFilter.class,
@@ -67,17 +67,19 @@ public class AnalysisPresetBuilderTest {
     }
 
     @Test
-    public void testBuildGenomePreset() {
+    void testBuildGenomePreset() {
         Analysis analysis = instance.buildGenomePreset();
-        assertThat(analysis.getAnalysisMode(), equalTo(AnalysisMode.PASS_ONLY));
-        assertThat(analysis.getInheritanceModeOptions(), equalTo(InheritanceModeOptions.defaults()));
-        assertThat(analysis.getFrequencySources(), equalTo(FREQUENCY_SOURCES));
-        assertThat(analysis.getPathogenicitySources(), equalTo(Set.of(REVEL, MVP, REMM)));
-        assertThat(analysis.getAnalysisSteps().stream().map(AnalysisStep::getClass).collect(Collectors.toList()),
+        assertThat(analysis.analysisMode(), equalTo(AnalysisMode.PASS_ONLY));
+        assertThat(analysis.inheritanceModeOptions(), equalTo(InheritanceModeOptions.defaults()));
+        assertThat(analysis.frequencySources(), equalTo(FREQUENCY_SOURCES));
+        assertThat(analysis.pathogenicitySources(), equalTo(Set.of(REVEL, MVP, REMM, ALPHA_MISSENSE, SPLICE_AI)));
+        assertThat(analysis.analysisSteps().stream().map(AnalysisStep::getClass).toList(),
                 equalTo(List.of(
                         HiPhivePriority.class,
                         PriorityScoreFilter.class,
+                        GeneBlacklistFilter.class,
                         FailedVariantFilter.class,
+                        AlleleBalanceFilter.class,
                         RegulatoryFeatureFilter.class,
                         FrequencyFilter.class,
                         PathogenicityFilter.class,
